--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,9 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Install Node dependencies
+        run: npm ci
+
       - name: Install Playwright browsers
         run: npx -y playwright@1.55.0 install --with-deps
 
@@ -131,6 +134,9 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+
+      - name: Install Node dependencies
+        run: npm ci
 
       - name: Install Playwright browsers
         run: npx -y playwright@1.55.0 install --with-deps
