--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,60 +8,9 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install Playwright browsers
-        run: npx -y playwright@1.55.0 install --with-deps
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build images (Docker Compose)
-        run: docker compose build --pull
-
-  smoke:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Deploy backend (API + adapters)
-        run: docker compose up -d adapter-a adapter-b api
-
-      - name: Wait for API to be healthy
-        run: |
-          for i in {1..40}; do
-            curl -fsS http://localhost:8080/healthz && exit 0
-            sleep 2
-          done
-          echo "API not healthy" && docker compose logs api && exit 1
-
-      - name: Smoke test (k6)
-        run: |
-          docker run --rm --network host \
-            -e BASE_URL=http://localhost:8080 \
-            -e SERVICE_API_KEY=service-secret \
-            -v "$PWD/tests/perf":/scripts \
-            grafana/k6 run /scripts/k6-smoke.js
-
-      - name: Teardown
-        if: always()
-        run: docker compose down -v
-
-  ui-tests:
-    runs-on: ubuntu-latest
-    needs: [smoke]
+    timeout-minutes: 45
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -75,27 +24,45 @@ jobs:
       - name: Install Node dependencies
         run: npm ci
 
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}-chromium-1.55
+          restore-keys: |
+            ${{ runner.os }}-playwright-
+
       - name: Install Playwright browsers
-        run: npx -y playwright@1.55.0 install --with-deps
+        run: npx -y playwright@1.55.0 install --with-deps chromium
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build images (Docker Compose)
+        env:
+          DOCKER_BUILDKIT: 1
+        run: docker compose build --pull
 
       - name: Deploy backend (API + adapters)
         run: docker compose up -d adapter-a adapter-b api
 
       - name: Wait for API to be healthy
         run: |
-          for i in {1..40}; do
+          for i in {1..60}; do
             curl -fsS http://localhost:8080/healthz && exit 0
             sleep 2
           done
           echo "API not healthy" && docker compose logs api && exit 1
 
-      - name: Deploy frontend (static UIs)
+      - name: k6 smoke (quick)
         run: |
-          docker compose restart api
-          curl -fsS http://localhost:8080/ui/ | head -n 1
-          curl -fsS http://localhost:8080/demo/ | head -n 1
+          docker run --rm --network host \
+            -e BASE_URL=http://localhost:8080 \
+            -e SERVICE_API_KEY=service-secret \
+            -v "$PWD/tests/perf":/scripts \
+            grafana/k6 run /scripts/k6-smoke.js
 
-      - name: Run UI tests (Makefile)
+      - name: Run UI tests
         env:
           BASE_URL: http://localhost:8080
         run: make test-ui WORKERS=4
@@ -114,45 +81,7 @@ jobs:
           name: test-results-ui
           path: test-results
 
-      - name: Docker logs (on failure)
-        if: failure()
-        run: docker compose logs --no-color
-
-      - name: Teardown
-        if: always()
-        run: docker compose down -v
-
-  api-tests:
-    runs-on: ubuntu-latest
-    needs: [smoke]
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install Node dependencies
-        run: npm ci
-
-      - name: Install Playwright browsers
-        run: npx -y playwright@1.55.0 install --with-deps
-
-      - name: Deploy backend (API + adapters)
-        run: docker compose up -d adapter-a adapter-b api
-
-      - name: Wait for API to be healthy
-        run: |
-          for i in {1..40}; do
-            curl -fsS http://localhost:8080/healthz && exit 0
-            sleep 2
-          done
-          echo "API not healthy" && docker compose logs api && exit 1
-
-      - name: Run API tests (Makefile)
+      - name: Run API tests
         env:
           BASE_URL: http://localhost:8080
         run: make test-api-only WORKERS=4
